[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "judgelm"
version = "1.0"
description = "An open platform for training, serving, and evaluating scalable large language model judges."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate>=0.21", "einops", "gradio", "httpx", "markdown2[all]", "nh3", "numpy",
    "peft", "prompt_toolkit>=3.0.0", "pydantic<=2.0", "requests", "rich>=10.0.0", "sentencepiece",
    "shortuuid", "tiktoken", "tokenizers>=0.12.1", "torch==2.0.1",
    "transformers==4.28.1", "uvicorn", "wandb", "ray==2.3.1", "scikit-learn", "fastapi", "uvicorn"
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]


[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

# pip install flash-attn==2.0.4 --no-build-isolation